[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
crypto = "0.5.1"
itertools = "0.12.0"
md5 = "0.7.0"
regex = "1.10.2"
serde_json = "1.0.108"
